<resources>
    <string name="app_name">Asker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="title_activity_login">Sign in</string>

    <string name="send">Send</string>
    <string name="please_wait">Please wait…</string>
    <string name="exit">EXIT</string>
    <string name="title_activity_answer">AnswerActivity</string>
    <string name="action_sign_in_short">sign</string>
    <string name="action_sign_in">Sign in OR Register</string>
    <string name="question_need_login">Need login. Click to login.</string>
    <string name="question_no_more">(*￣ω￣) Don\'t have any more.</string>
    <string name="question_more">Loading…</string>
    <string name="question_error">Network error, click to retry.</string>
    <string name="base_info">Base Info</string>
    <string name="nick_name">Name</string>
    <string name="un_edit">Didn\'t edit.</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="tel">Phone</string>
    <string name="email">Email</string>
    <string name="teacher_info">Teacher Info</string>
    <string name="college">College</string>
    <string name="academy">Academy</string>
    <string name="name">Name</string>
    <string name="student_info">Student Info</string>
    <string name="grade">Grade</string>
    <string name="un_edit_year">Didn\'t edit (eg: 2014)</string>
    <string name="major">Major</string>
    <string name="log_out">Log out</string>
    <string name="account_id">Account Id</string>
    <string name="password">Password</string>
    <string name="reply_content">Reply Content</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="content">Content</string>
    <string name="done">done</string>
    <string name="question">Question</string>
    <string name="stars">Stars</string>
    <string name="me">Me</string>
    <string name="more">Action</string>
    <string name="settings">Settings</string>
    <string name="ask">Ask</string>
    <string name="no_name_user">UnKnow User</string>
    <string name="token_out_date_login_again">Token out of date, you should login again.</string>
    <string name="please_login">Please login</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="wrong_user">UnKnow User</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="click_to_login">Click To Login</string>
    <string name="please_edit_info">No name, Please edit.</string>
    <string name="only_student_can_ask">Only student can ask question.</string>
    <string name="asker">Asker</string>
    <string name="star">Star</string>
    <string name="answer">Answer</string>
    <string name="content_not_null">Content can\'t be null.</string>
    <string name="reply_success">Reply Success</string>
    <string name="error">ERROR</string>
    <string name="answering">Relying</string>
    <string name="ok">OK</string>
    <string name="un_login_please_login">Didn\'t login, please login. (How can you come here…</string>
    <string name="title_not_null">Title can\'t be null.</string>
    <string name="type_not_null">Type can\'t be null.</string>
    <string name="ask_success">Ask Success</string>
    <string name="asking">Asking</string>
    <string name="login">Login</string>
    <string name="account_id_not_null">Account id can\'t be null.</string>
    <string name="password_not_null">Password can\'t be null.</string>
    <string name="register">Register</string>
    <string name="please_choose_register_type">Please choose register type.</string>
    <string name="cancer">Cancer</string>
    <string name="logging">Logging</string>
    <string name="success">SUCCESS</string>
    <string name="register_success_login">Register success, login?</string>
    <string name="registering">Registering</string>
    <string name="un_login_how_to_come_in">Didn\'t login, How can you get here!</string>
    <string name="detail">Detail</string>
    <string name="wrong_email">Wrong email</string>
    <string name="wrong_grade_year">Wrong Grade. Please write 4 numbers (eg: 2014)</string>
    <string name="getting_info">Getting information</string>
    <string name="updating_info">Updating information</string>
    <string name="not_change">No change</string>
    <string name="wrong_register_type">Wrong register type</string>
    <string name="wrong_password">Your password is wrong.</string>
    <string name="network_break">Network error.</string>
    <string name="network_connect_error">Network connect error.</string>
    <string name="recent">Recent</string>
    <string name="about">About</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_must_same">Not the same password.</string>
    <string name="question_no">No Questions.</string>
    <string name="input_for_search">What\'s your want?</string>

</resources>
