<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="24dp"
        android:text="@string/student_info"
        android:typeface="serif"
        android:focusable="true"
        android:textColor="@color/primary_text"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/div"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/college"
            android:textColor="@color/secondary_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_college"
            android:hint="@string/un_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center_vertical|end"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            tools:text="重庆邮电大学" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/div"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/grade"
            android:textColor="@color/secondary_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_year"
            android:hint="@string/un_edit_year"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center_vertical|end"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            android:maxLength="4"
            tools:text="2014" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/div"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/academy"
            android:textColor="@color/secondary_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_academy"
            android:hint="@string/un_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center_vertical|end"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            tools:text="软件工程" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/div"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/major"
            android:textColor="@color/secondary_text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_major"
            android:hint="@string/un_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:gravity="center_vertical|end"
            android:inputType="text"
            android:textColor="@color/primary_text"
            android:textSize="16sp"
            tools:text="软件工程" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/div"/>

</LinearLayout>